name:                reflex-dom-semui
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            A reflex-dom API for semantic-ui components
description:         This package provides a Reflex wrapper around the
                     Semantic UI components. The goal is to make it fast
                     and easy to build nice looking applications and make
                     Semantic UI functionality a lot more discoverable.
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  lib/semantic.min.css

library
  hs-source-dirs: src
  js-sources:
    -- Order is important: jquery is used by semantic but must come after.
    lib/semantic.min.js,
    lib/jquery.min.js

  exposed-modules:
    Reflex.Dom.SemanticUI
    Reflex.Dom.SemanticUI.Button
    Reflex.Dom.SemanticUI.Checkbox
    Reflex.Dom.SemanticUI.Common
    Reflex.Dom.SemanticUI.Container
    Reflex.Dom.SemanticUI.Dropdown
    Reflex.Dom.SemanticUI.Icon
    Reflex.Dom.SemanticUI.Input
    Reflex.Dom.SemanticUI.Lenses
    Reflex.Dom.SemanticUI.Modal
    Reflex.Dom.SemanticUI.RadioGroup

  build-depends:
      base            >= 4.8 && < 4.10
    , containers
    , data-default
    , file-embed      >= 0.0.10 && < 0.1
    , ghcjs-dom
    , jsaddle         >= 0.8.0.0 && < 0.10
    , lens            >= 4.15.2
    , mtl
    , reflex          >= 0.5 && < 0.6
    , reflex-dom-core >= 0.4 && < 0.5
    , text

  if impl(ghcjs)
    build-depends: ghcjs-base

  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-orphans
  cpp-options: -D_GHCJS_ -DGHCJS_GC_INTERVAL=60000

  default-language:    Haskell2010

executable example
  main-is: Main.hs
  hs-source-dirs: example, src
  other-modules: Example, Example.CountryEnum, Example.StateEnum
  default-language: Haskell2010
  build-depends:
      base            >= 4.8 && < 4.10
    , containers
    , data-default
    , file-embed      >= 0.0.10 && < 0.1
    , ghcjs-dom
    , jsaddle         >= 0.8.0.0 && < 0.10
    , lens
    , mtl
    , reflex          >= 0.5 && < 0.6
    , reflex-dom-core >= 0.4 && < 0.5
    , text
  if impl(ghc)
    build-depends:
        jsaddle-warp
      , warp
      , wai
      , wai-app-static
      , websockets
  ghc-prof-options: -fprof-auto
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

source-repository head
  type: git
  location: https://github.com/reflex-frp/reflex-dom-semui
